# AITools

./: .gitignore  pyproject.toml
AITools/: __init__.py
AITools/cli/: commands.py
AITools/config/: loader.py  schema.py
AITools/providers/: base.py
study_demo/: study_rich.py
