[project]
name = "aitools"
version = "0.1.0"
description = "学习nanobot所实践的demo"
authors = [
    {name = "therzyx"}
]
requires-python = ">=3.11"
dependencies = [
    "rich (>=14.3.3,<15.0.0)",
    "typer (>=0.24.1,<0.25.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]

[project.scripts]
aitools = "AITools.cli.commands:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
